# FixelBackend

./: .gitignore  .vercelignore  api_documentation.md  build.bat  build.sh  db.py  index.html  main.py  models.py  pyproject.toml  requirements.txt  schema.py  utils.py  vercel.json
tests/: conftest.py  test_main.py
