[project]
name = "fixelbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "exponent-server-sdk>=2.2.0",
    "fastapi>=0.124.2",
    "python-dotenv>=1.2.1",
    "supabase>=2.25.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
